Fix PivotBlockConfirmerTest
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>